<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyHealthActivity!</string>
    <string name="app_name">step it UP</string>
    <string name="stats">My Stats</string>
    
    <string name="bmi">Calculator</string>
    <string name="maps">Maps</string>
    <string name="music">Music</string>
    <string name="pedometer">Pedometer</string>
    <string name="recipes">Recipes</string>
    
    <!-- labels for food diary -->
    <string name="fruitLabel">Fruit</string>
    <string name="vegLabel">Veg</string>
    <string name="dairyLabel">Dairy</string>
    <string name="meatLabel">Meat</string>
    <string name="grainLabel">Grain</string>

    <!-- labels for widgets -->
    <string name="heightLabel">Height</string>
    <string name="calculateButton">Calculate</string>
    <string name="EmptyString"></string>
    <string name="weightLabel">Weight</string>
    <string name="bmiLabel">Body Mass Index</string>

    <!-- the BMI descriptions -->
    <string name="bmiNormal">Normal</string>
    <string name="bmiOver">Overweight</string>
    <string name="bmiUnder">Underweight</string>
    <string name="bmiSUnder">Severely Underweight</string>
    <string name="bmiObese">Obese</string>

    <!-- Strings arrays used in Spinner widgets -->
    <string-array name="heightUnitsArray">
        <item>feet/inch</item>
        <item>m/cm</item>
    </string-array>
    <string-array name="weightUnitsArray">
        <item>lb</item>
        <item>kg</item>
    </string-array>

    <!-- Colors used to used in the labels and the backgrouds -->
    <color name="colorRed">#ff0000</color>
    <color name="colorOrange">#fbae34</color>
    <color name="colorGreen">#00ff00</color>
    <color name="colorBG">#787878</color>
    <color name="colorTitle">#C5C6C7</color>
    <color name="colorFill">#C5C6C7</color>
    <color name="colorFonts">#000000</color>

    <!-- pedometor string start here -->
    <string name="notification_subtitle">Counting your steps</string>
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="low">low</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">miles or kilometers </string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">kilometers</string>
    <string name="units_imperial">miles</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="quit">Quit</string>

</resources>